--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
       content="Web site created using create-react-app"
     />
 
-    <title>React App</title>
+    <title>CATL Panel</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://unpkg.com/canvas-gauges@2.1.7/gauge.min.js"></script>
   </body>
 </html>
