--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://unpkg.com/canvas-gauges@2.1.7/gauge.min.js"></script>
+
+    <script src="//cdn.rawgit.com/Mikhus/canvas-gauges/gh-pages/download/2.1.7/linear/gauge.min.js"></script>
   </body>
 </html>
