修正讀取資料緩慢問題、新增部分RWD

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>CATL Panel</title>
+    <title>TCN01-A1</title>
   </head>
   <body>
     <div id="root"></div>
